[gd_scene load_steps=16 format=2]

[ext_resource path="res://grownzone.gd" type="Script" id=1]
[ext_resource path="res://farmingTilesheetComplete.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 64, 112, 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6.5, 6.5 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 192, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 176, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 176, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 160, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 144, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 128, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 112, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 96, 48, 16, 16 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "berrygrowing",
"speed": 0.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "carrotgrowing",
"speed": 0.0
}, {
"frames": [  ],
"loop": true,
"name": "none",
"speed": 0.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "oniongrowing",
"speed": 0.0
} ]

[node name="grownzone" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="hoeland" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="plant" type="AnimatedSprite" parent="."]
position = Vector2( 0, -4 )
frames = SubResource( 10 )
animation = "none"

[node name="oniongrowntimer" type="Timer" parent="."]
wait_time = 5.0

[node name="carrotgrowntimer" type="Timer" parent="."]
wait_time = 5.0

[node name="berrygrowntimer" type="Timer" parent="."]
wait_time = 7.0

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="timeout" from="oniongrowntimer" to="." method="_on_oniongrowntimer_timeout"]
[connection signal="timeout" from="carrotgrowntimer" to="." method="_on_carrotgrowntimer_timeout"]
[connection signal="timeout" from="berrygrowntimer" to="." method="_on_berrygrowntimer_timeout"]
